--- a/src/sass/views/_smallViewUnder.scss
+++ b/src/sass/views/_smallViewUnder.scss
@@ -8,6 +8,11 @@
   @title: Small view and under (screen only)
  */
 
+$banner-gradient-start: #4474AD;
+$banner-gradient-end: #174F88;
+$breadcrumb-bar-gradient-start: #F0EFEF;
+$breadcrumb-bar-gradient-end: #DFDFDD;
+
 %small-view-display-none {
 	display: none;
 }
@@ -27,7 +32,11 @@
 }
 
 #wb-bnr {
-	background-image: linear-gradient(#4474AD, #4474AD, #174F88);
+	background: {
+		color: $banner-gradient-end;
+		image: linear-gradient($banner-gradient-start, $banner-gradient-start, $banner-gradient-end);
+	}
+	filter: unquote("progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#{$banner-gradient-start}', endColorstr='#{$banner-gradient-end}')");
 
 	.row {
 		margin: 0;
@@ -77,7 +86,7 @@
 }
 
 #wb-bc {
-	background: linear-gradient(#F0EFEF, #DFDFDD) repeat scroll 0 0 / 100% auto #DFDFDD;
+	@include linear-background($breadcrumb-bar-gradient-start, $breadcrumb-bar-gradient-end);
 }
 
 [dir=rtl] {
